# copyright-check

./: README.md  pyproject.toml
.github/workflows/: backport.yml
src/copyright_check/: __init__.py
test/: test_check_header.py
test/resources/: valid.xml
